--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,3 +27,12 @@
     color: #333333;
     text-decoration: none;
 }
+.navbar button {
+    font-size: 16px;
+    color: var(--primary-color);
+    border: 1px solid;
+    border-radius: 4px;
+    border-color: var(--primary-color);
+    padding: 10px;
+    cursor: pointer;
+}
